--- a/html/home.html
+++ b/html/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Boo</title>
-    <link rel="stylesheet" href="LANDING PAGE.CSS">
+    <title>Milky Boo</title>
+    <link rel="stylesheet" href="../css/LANDING PAGE.CSS">
 </head>
 <body>
 
@@ -18,16 +18,16 @@
         
         <!-- Image Section -->
         <div class="image-container">
-            <img src="img/cow.jpg" alt="An image representing the content">
+            <img src="/img/cow.jpg" alt="An image representing the content">
         </div>
 
         <!-- Text Content Section -->
         <div class="text-content">
-            <h2>Welcome to Daily Boo</h2>
-            <p>Daily Boo is the ultimate platform for exploring fresh, healthy, and organic milk products delivered straight to your door.</p>
+            <h2>Welcome to Milky Boo</h2>
+            <p>Milky Boo is the ultimate platform for exploring fresh, healthy, and organic milk products delivered straight to your door.</p>
             <p>Our mission is to provide you with the highest quality milk sourced from trusted local farms, ensuring freshness and taste in every drop.</p>
             <p>We carefully select our suppliers and ensure that all our products meet the highest industry standards.</p>
-            <p>Whether you’re a family looking for daily essentials or a restaurant in need of bulk orders, Daily Boo has you covered.</p>
+            <p>Whether you’re a family looking for daily essentials or a restaurant in need of bulk orders, Milky Boo has you covered.</p>
             <p>Experience the convenience and quality with just a few clicks. Join us today and enjoy fresh milk delivered to your doorstep!</p>
         </div>
         
