--- a/html/review_admin.html
+++ b/html/review_admin.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Review Admin</title>
-    <link rel="stylesheet" href="admin-css/review-admin.css">
+    <link rel="stylesheet" href="/admin-css/review-admin.css">
     <script src="review_admin.js" defer></script>
 </head>
-<body style="background-image: url('img/background\ log.webp'); background-size: cover; background-repeat: no-repeat;">
+<body style="background-image: url('/img/background\ log.webp'); background-size: cover; background-repeat: no-repeat;">
     <nav>
         <a href="shop-admin.html" style="color: white;">Shop</a>
         <a href="orders_admin.html " style="color: white;">Orders</a>
