--- a/html/LANDING PAGE.HTML
+++ b/html/LANDING PAGE.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="customer-css/home.css">
+    <link rel="stylesheet" href="../customer-css/home.css">
 </head>
 <body style="background-image: url('img/background\ log.webp'); background-size: cover; background-repeat: no-repeat;">
     <!-- Navigation Bar -->
@@ -21,7 +21,7 @@
     <!-- Main Content -->
     <div class="container">
         <div class="image-section">
-            <img src="img/milk.jpg" alt="Milk Delivery" class="hero-image">
+            <img src="/img/milk.jpg" alt="Milk Delivery" class="hero-image">
         </div>
         <div class="description-section">
             <h1>Welcome to Fresh Milk Delivery</h1>
