--- a/html/LOG IN.HTML
+++ b/html/LOG IN.HTML
@@ -9,7 +9,7 @@
             /* Add basic styles for layout and design */
             body {
                 font-family: Arial, sans-serif;
-                background-image: url('img/background log.webp');
+                background-image: url('/img/background\ log.webp');
                 background-size: cover; 
                 background-position: center; 
                 background-repeat: no-repeat; 
@@ -77,7 +77,7 @@
         <div class="container">
             <!-- Logo Container -->
             <div class="logo-container">
-                <img src="img/logo.png" alt="Logo"> <!-- Replace 'logo.png' with your logo file -->
+                <img src="/img/logo.png" alt="Logo"> <!-- Replace 'logo.png' with your logo file -->
             </div>
 
             <!-- Login Form -->
