--- a/html/profile_admin.html
+++ b/html/profile_admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Profile</title>
-    <link rel="stylesheet" href="admin-css/profile-admin.css">
+    <link rel="stylesheet" href="/admin-css/profile-admin.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,7 +67,7 @@
         }
     </style>
 </head>
-<body style="background-image: url('img/background\ log.webp'); background-size: cover; background-repeat: no-repeat;">
+<body style="background-image: url('/img/background\ log.webp'); background-size: cover; background-repeat: no-repeat;">
 
     <!-- Navigation Bar -->
     <nav>
