--- a/html/shop.html
+++ b/html/shop.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-    <link rel="stylesheet" href="customer-css/shop.css">
+    <link rel="stylesheet" href="/customer-css/shop.css">
 </head>
-<body style="background-image: url('img/background\ log.webp'); background-size: cover; background-repeat: no-repeat;">
+<body style="background-image: url('/img/background\ log.webp'); background-size: cover; background-repeat: no-repeat;">
     <!-- Navigation Bar -->
     <nav>
         <ul>
